tests/rosetta/out/Smalltalk/abundant-deficient-and-perfect-number-classifications.out
/tmp/abundant-deficient-and-perfect-number-classifications.st:6: parse error, expected ']'
