tests/rosetta/out/Smalltalk/abundant-deficient-and-perfect-number-classifications.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| pfacSum sum p main d a pnum i j |
pfacSum := [:i | sum := 0.
p := 1.
[(p <= ((i / 2)))] whileTrue: [.
((((i % p)) = 0)) ifTrue: [
sum := (sum + p).
] .
p := (p + 1).
].
.
sum. ].
main := [ d := 0.
a := 0.
pnum := 0.
i := 1.
[(i <= 20000)] whileTrue: [.
j := pfacSum value: i.
((j < i)) ifTrue: [
d := (d + 1).
] .
((j = i)) ifTrue: [
pnum := (pnum + 1).
] .
((j > i)) ifTrue: [
a := (a + 1).
] .
i := (i + 1).
].
.
Transcript show: ((((('There are ') + ((d asString)))) + (' deficient numbers between 1 and 20000'))) printString; cr.
Transcript show: ((((('There are ') + ((a asString)))) + (' abundant numbers  between 1 and 20000'))) printString; cr.
Transcript show: ((((('There are ') + ((pnum asString)))) + (' perfect numbers between 1 and 20000'))) printString; cr. ].
main value.
